# gumshoe

./: README.md  gumshoe.py  pyproject.toml
