[tool.poetry]
name = "gumshoe"
version = "0.2.0"
description = ""
authors = ["Alistair Israel <aisrael@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.33.1"
pyfzf = "^0.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
